--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/index.js",
+    "prod": "set NODE_ENV=production && node ./src/index.js",
     "lint": "eslint ./src --ext .js"
   },
   "keywords": [
@@ -21,6 +22,7 @@
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "zod": "^3.25.51"
   },
   "devDependencies": {
