--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Anonymous Messages App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/index.js",
-    "prod": "set NODE_ENV=production && node ./src/index.js",
+    "prod": "set NODE_ENV=production&&node ./src/index.js",
+    "test": "set NODE_ENV=test&&node ./src/index.js",
     "lint": "eslint ./src --ext .js"
   },
   "keywords": [
@@ -17,18 +17,18 @@
   "author": "Bahi Habash",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.4.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "zod": "^3.25.51"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "chalk": "^5.4.1",
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3"
   }
